--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
 .pomodoro {
     background-image: linear-gradient(to top, #6a85b6 0%, #bac8e0 100%);
     width: 600px;
-    height: 300px;
+    height: 350px;
     font-size: 18px;
     text-align: center;
     border-radius: 20px;
@@ -84,13 +84,6 @@ body {
     font-size: 50px;
     text-align: center;
 }
-.pomoButtons {
-    padding: 20px;
-    display: flex;
-    justify-content: space-evenly;
-
-
-}
 .bgmusic {
     /* background-image: linear-gradient(to top, #6a85b6 0%, #bac8e0 100%); */
     color:rgb(0, 0, 0);
@@ -106,7 +99,7 @@ input {
     padding: 10px;
     background:transparent;
 }
-button {
+#todoButton {
     border: none;
     outline: none;
     padding: 16px 50px;
@@ -115,6 +108,9 @@ button {
     font-size: 14px;
     border-radius: 40px;
     cursor: pointer;
+}
+#todoButton:hover {
+    background: #d73b3e;
 }
 ul li {
     list-style: none;
@@ -158,4 +154,34 @@ ul li span {
 ul li span:hover {
     background: #edeef0;
 
+}
+
+.pomoButtons {
+    background:#d73b3e;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    padding: 20px;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    margin-top: 20px;
+    /* padding-right: 20px; */
+}
+.pomoButtons:hover{
+    background: red;
+}
+
+.setButtons {
+    background:#006994  ;
+    padding: 20px;
+    outline: none;
+    border: none;
+    color: white;
+    font-size: 18px;
+    border-radius: 20px;
+    margin-bottom: 20px;
+}
+.setButtons:hover{
+    background:blue;
 }
