--- a/style.css
+++ b/style.css
@@ -1,36 +1,77 @@
 body {
-    background-image: url("images/41089.jpg");
+    background-image: url("images/default-bg.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     font-family: Winky Rough;
+}
+body.default-theme{
+    background-image: url("images/default-bg.jpg");
 
 }
-.main{
-    background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
-    font-size: 20px;
-    text-align: center;
-    border-radius: 20px;
-    
+body.dark-theme{
+    background-image: url("images/dark-bg.jpg");
+
 }
-.main h1 {
-    display: flex;
-    /* text-align: center; */ 
+body.ghibli-theme{
+    background-image: url("images/ghibli.png");
+
+}
+.sidebar{
+    background: linear-gradient(to right, #8e9eab, #eef2f3);
+
+    width: 100%;
+    height: 80px;
+    border-radius:20px ;
     margin-bottom: 20px;
-    justify-content: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* padding: 20px; */
+    flex-wrap: wrap;
 }
-.main h1 img {
+@media (max-width: 768px) {
+    .sidebar {
+        flex-direction: column;
+        height: auto;
+        padding: 10px;
+        gap: 10px; /* optional: spacing between items */
+    }
+    #musicframe {
+        width: 400px;
+    }
+}
+.sidebar button{
+    outline: none;
+    font-size: 20px;
+    color: black;
+    font-family: Winky Rough;  
+    outline: none;
+    border: none;
+    cursor: pointer;
+    background: transparent;
+    text-decoration: none;
+}
+.sidebar button:hover {
+    color: rgb(144, 0, 255);
+}
+.sidebar h1 {
+    display: flex;
+    margin-left: 20px;
+    justify-content: left;
+}
+.sidebar h1 img {
     width: 50px;    
     margin-left: 20px;
 }
 .tools {
     display: flex;
     justify-content: space-between;
-
-    /* align-items: center; */
-
+    flex-wrap: wrap;
+    opacity: 0.85;
 }
+
 .todolist{
     background-image: linear-gradient(to top, #6a85b6 0%, #bac8e0 100%);
     width: 500px;
@@ -39,9 +80,13 @@ body {
     border-radius: 20px;
     padding-left: 30px;
     padding-right: 30px;
-
-
-
+    margin-bottom: 20px;
+}
+.todolist.default-theme {
+    background-image: linear-gradient(to top, #6a85b6 0%, #bac8e0 100%);
+}
+.todolist.dark-theme {
+    background-image: linear-gradient(to right, rgb(55, 65, 81), rgb(17, 24, 39), rgb(0, 0, 0));
 }
 .todolist h2 {
     display: flex;
@@ -63,8 +108,8 @@ body {
 }
 .pomodoro {
     background-image: linear-gradient(to top, #6a85b6 0%, #bac8e0 100%);
-    width: 600px;
-    height: 350px;
+    width: 500px;
+    height: 400px;
     font-size: 18px;
     text-align: center;
     border-radius: 20px;
@@ -85,7 +130,6 @@ body {
     text-align: center;
 }
 .bgmusic {
-    /* background-image: linear-gradient(to top, #6a85b6 0%, #bac8e0 100%); */
     color:rgb(0, 0, 0);
     text-decoration:solid;
     width: 100%;
@@ -137,7 +181,7 @@ ul li.checked{
     text-decoration: line-through;
 }
 ul li.checked::before{
-    background-image: url("images/check\ \(1\).png");
+    background-image: url("images/check.png");
 }
 ul li span {
     position: absolute;
