--- a/style.css
+++ b/style.css
@@ -6,50 +6,19 @@ body {
     background-attachment: fixed;
     font-family: Winky Rough;
 }
-body.default-theme{
-    background-image: url("images/default-bg.jpg");
 
-}
-body.dark-theme{
-    background-image: url("images/dark-bg.jpg");
-
-}
-body.ghibli-theme{
-    background-image: url("images/ghibli.png");
-
-}
 .sidebar{
     background: linear-gradient(to right, #8e9eab, #eef2f3);
 
     width: 100%;
-    height: 80px;
-    border-radius:20px ;
+    height: 10vh;
+    border-radius:30px;
     display: flex;
     justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-bottom: 30px;
+    align-items: center;    
+    
 }
-/* @media (max-width: 768px) {
-    .body
-    #musicframe {
-        width: max-content;
-    }
-} */
-.sidebar button{
-    outline: none;
-    font-size: 20px;
-    color: black;
-    font-family: Winky Rough;  
-    outline: none;
-    border: none;
-    cursor: pointer;
-    background: transparent;
-    text-decoration: none;
-}
-.sidebar button:hover {
-    color: rgb(144, 0, 255);
-}
+
 .sidebar h1 {
     display: flex;
     margin-left: 20px;
@@ -59,22 +28,21 @@ body.ghibli-theme{
     width: 50px;    
     margin-left: 20px;
 }
-.tools {
+#container {
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    opacity: 0.85;
-    margin-bottom: 30px;
+    flex-direction: column;
+    justify-content: space-evenly;
+    font-size: 1.3rem;
 }
 
 .todolist{
-    background-image: linear-gradient(to top, #6a85b6 0%, #bac8e0 100%);
-    width: 500px;
-    height: 400px;
-    font-size: 18px;
-    border-radius: 20px;
-    padding-left: 30px;
-    padding-right: 30px;
+    background-image: linear-gradient(to top, hsl(219, 34%, 56%, 0.8) 0%, hsl(218, 38%, 80%, 0.8) 100%);
+    padding: 10px;
+    margin-top: 20px;
+    /* height: 30vh; */
+    border-radius: 30px;
+    overflow: hidden;
+
 }
 .todolist h2 {
     display: flex;
@@ -89,19 +57,15 @@ body.ghibli-theme{
     justify-content: space-between;
     padding-left: 25px;
     align-items: center;
-    background:#c0c9da;
+    background:hsl(219, 26%, 90%, 0.8);
     border-radius: 30px;
-    margin-bottom: 20px;
 }
 .pomodoro {
-    background-image: linear-gradient(to top, #6a85b6 0%, #bac8e0 100%);
-    width: 500px;
-    height: 400px;
-    font-size: 18px;
+    background-image: linear-gradient(to top, hsl(219, 34%, 56%, 0.8) 0%, hsl(218, 38%, 80%, 0.8) 100%);
+    margin-top: 20px;
+    height: 60vh;
     text-align: center;
     border-radius: 20px;
-    padding-left: 30px;
-    padding-right: 30px;
 }
 .pomodoro h2 {
     display: flex;
@@ -112,21 +76,15 @@ body.ghibli-theme{
     margin-left: 15px;
 }
 #timer {
-    font-size: 50px;
+    font-size: 4rem;
     text-align: center;
 }
-/* .bgmusic {
-    color:rgb(0, 0, 0);
-    text-decoration:solid;
-    width: 100%;
-    text-align: center;
-    font-size: 20px;
-} */
+
 input {
     flex: 1;
     outline: none;
     border: none;
-    padding: 10px;
+    /* padding: 10px; */
     background:transparent;
 }
 #todoButton {
@@ -145,7 +103,7 @@ input {
 ul li {
     list-style: none;
     cursor: pointer;
-    font-size: 17px;
+    font-size: 1.2rem;
     padding: 12px 8px 12px 50px;
     user-select: none;
     position: relative;
@@ -185,32 +143,50 @@ ul li span:hover {
 }
 
 .pomoButtons {
-    background:#d73b3e;
+    background:hsl(359, 66%, 65%);
     color: white;
-    font-size: 16px;
+    width: 30%;
+    font-size: 1.1rem;
     cursor: pointer;
     padding: 20px;
-    border-radius: 20px;
+    border-radius:20px;
     border: none;
     outline: none;
-    margin-top: 20px;
+    margin: 30px;
+    align-items: center;
+    
 }
 .pomoButtons:hover{
-    background: red;
+    background:hsl(359, 66%, 75%);
+
+}
+.pomoButtons:active {
+    background:hsl(359, 66%, 85%);
+
 }
 
 .setButtons {
-    background:#006994  ;
+    background:hsl(359, 66%, 65%);
     padding: 20px;
+    width: 20%;
     outline: none;
     border: none;
     color: white;
-    font-size: 18px;
+    font-size: 1.1rem;
     border-radius: 20px;
+    margin: 10px;
+    margin-top: 20px;
     margin-bottom: 20px;
+    /* align-items: center; */
 }
 .setButtons:hover{
-    background:blue;
+    background:hsl(359, 66%, 75%);
+
+}
+.setButtons:active {
+    background:hsl(359, 66%, 85%);
+
+
 }
 .lowerSection {
     display: flex;
@@ -221,14 +197,14 @@ ul li span:hover {
 
 }
 .bgmusic{
-    width: 500px;
-    height: 410px;
-    background-image: linear-gradient(to top, #6a85b6 0%, #bac8e0 100%);
+    /* width: 500px; */
+    height: 60vh;
+    background-image: linear-gradient(to top, hsl(219, 34%, 56%, 0.8) 0%, hsl(218, 38%, 80%, 0.8) 100%);
     text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
     border-radius: 20px;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-bottom: 30px;
+    padding-top: 0%;
 }
 .bgmusic h2 {
     display: flex;
@@ -239,14 +215,14 @@ ul li span:hover {
     margin-left: 15px;
 }
 .settings {
-    width: 500px;
-    height: 410px;
-    background-image: linear-gradient(to top, #6a85b6 0%, #bac8e0 100%);
+    /* width: 500px; */
+    height: 50vh;
+    background-image: linear-gradient(to top, hsl(219, 34%, 56%, 0.8) 0%, hsl(218, 38%, 80%, 0.8) 100%);
     text-align: center;
+    margin-top: 20px;
     border-radius: 20px;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-bottom: 30px;
+    padding: 30px;
+    padding-top: 0;
 }
 .settings h2 {
     display: flex;
@@ -257,43 +233,45 @@ ul li span:hover {
     margin-left: 15px;
 }
 .themes {
-    display: flex;
-    justify-content: space-between;
+    display: inline-grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
 }
 .themes button{
-    font-size: 20px;
+    font-size: 1.2rem;
     color: black;
     font-family: Winky Rough;  
     cursor: pointer;
     background-image: linear-gradient(220.55deg, #FFED46 0%, #FF7EC7 100%);
-    border-radius: 20px;
+    border-radius: 40px;
     text-decoration: none;
-    width: 90px;
+    width: 100%;
     border: none;
 }
 .themes button:hover {
-    transform: scale(1.05);
+    transform: scale(1.15);
     transition: transform 0.2s;
 }
 .music {
-    display: flex;
-    justify-content: space-between;
+    display: inline-grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
     margin-top: 30px;
 }
 .music button{
-    font-size: 20px;
+    font-size: 1.2rem;
     color: black;
     font-family: Winky Rough;  
     cursor: pointer;
     border: none;
     background-image: linear-gradient(220.55deg, #FFED46 0%, #FF7EC7 100%);
-    border-radius: 20px;
-    width: 90px;
+    border-radius: 40px;
+    width: 100%;
     text-decoration: none;
-    margin-left: 10px;
+
 }
 .music button:hover {
-    transform: scale(1.05);
+    transform: scale(1.15);
     transition: transform 0.2s;
 }
 footer {
@@ -305,6 +283,7 @@ footer {
 footer {
     margin-top: 20px;
     background-color: aliceblue;
+    border-radius: 20px;
 }
 .foot {
     margin-top: 5px;
@@ -315,4 +294,51 @@ footer a {
     margin-left: 10px;
     color: red;
     text-decoration: none;
+}
+@media  (min-width:768px) {
+    #container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin-top: 20px;
+        margin-bottom: 20px;
+        row-gap: 20px;
+        column-gap: 20px
+    } 
+    .todolist {
+        max-width: 40vw;
+        max-height: 60vh;
+        padding: none;
+        margin: none;
+
+    }
+    .pomodoro {
+        max-width: 50vw;
+        height: 60vh;
+        padding: none;
+        margin: none;
+   }
+    .bgmusic {
+        max-width: 40vw;
+        max-height: 60vh;
+        margin: none;
+        overflow: hidden;
+    }
+    .bgmusic iframe {
+        width: 480px;
+    }
+    .settings {
+        max-width: 50vw;
+        height: 60vh;
+        margin: 0;
+        margin: none;
+    }
+    .themes button {
+        width: 10vw;
+    }
+    .music button {
+        width: 10vw;
+    }
+    footer {
+        margin-top: 20px;
+    }
 }
